fix: fixed rwd on small phones

--- a/src/components/Term/Term.module.scss
+++ b/src/components/Term/Term.module.scss
@@ -5,7 +5,6 @@
   margin: 0 auto;
   position: relative;
   padding: 40px 15px 15px 15px;
-  height: 900px;
 }
 
 .term {
